<resources>
    <string name="app_name">Live Wallpaper</string>
    
    <!-- Navigation Tabs -->
    <string name="tab_gallery">Gallery</string>
    <string name="tab_about">About</string>
    <string name="tab_settings">Settings</string>
    
    <!-- Custom Styled Toolbar Titles -->
    <string name="toolbar_gallery">𝓛𝓲𝓿𝓮 𝓦𝓪𝓵𝓵𝓹𝓪𝓹𝓮𝓻</string>
    <string name="toolbar_about"><b>About</b></string>
    <string name="toolbar_settings"><b>Settings</b></string>
    
    <!-- Gallery Screen -->
    <string name="gallery_title">Vertical Videos</string>
    <string name="no_videos_found">No vertical videos found on your device</string>
    <string name="videos_found_count">%d vertical videos found</string>
    <string name="permission_required_gallery">Storage permission required to scan vertical videos.</string>
    <string name="grant_permission">Grant Permission</string>
    
    <!-- Wallpaper Set Dialog -->
    <string name="dialog_set_wallpaper_title">Set as Live Wallpaper</string>
    <string name="dialog_set_wallpaper_msg">Do you want to set this vertical video as your live wallpaper?</string>
    <string name="action_set">Set Wallpaper</string>
    <string name="action_cancel">Cancel</string>
    <string name="service_not_active">To apply the live wallpaper successfully, please choose \"Live Wallpaper\" in the system picker that opens next.</string>
    
    <!-- About screen -->
    <string name="about_app_name">Live Wallpaper</string>
    <string name="about_title">About Application</string>
    <string name="about_description">This application functions as a vertical video gallery on your device.\nThe app scans your media store for portrait-oriented videos and allows you to set any of them as a live wallpaper in a few clicks.</string>
    <string name="warning_title">Important!</string>
    <string name="warning_description">After setting a live wallpaper using the Live Wallpaper app, it is not recommended to uninstall the app. Uninstalling the app will disable the active live wallpaper on your device.</string>
    <string name="author_title">Useful Links</string>
    <string name="author_handle">@OFFpolice</string>
    <string name="developer_info">Developer: OFFpolice</string>
    <string name="app_version">Version: 1.0 • Android App</string>
    
    <!-- Settings screen -->
    <string name="settings_title">Settings</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_wallpaper">Wallpaper Service</string>
    <string name="settings_category_general">General</string>
    
    <string name="settings_theme">Theme</string>
    <string name="settings_language">Language</string>
    <string name="settings_system_wallpaper_title">System Wallpaper Settings</string>
    <string name="settings_system_wallpaper_summary">Open Android live wallpaper manager</string>
    <string name="settings_app_info_title">App Info &amp; Permissions</string>
    <string name="settings_app_info_summary">Manage storage permissions and notifications</string>
    <string name="settings_version_title">App Version</string>
    <string name="settings_version_summary">1.0 • Modern Android Edition</string>
    
    <string name="dialog_select_theme">Choose Theme</string>
    <string name="dialog_select_language">Choose Language</string>
    
    <!-- Languages -->
    <string name="lang_system">System Default</string>
    <string name="lang_en">English</string>
    <string name="lang_ru">Русский (Russian)</string>
    <string name="lang_uk">Українська (Ukrainian)</string>
    
    <!-- Themes -->
    <string name="theme_system">System Default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
</resources>
